--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DevelopmentTask</string>
+    <string name="accessibility_service_description">Detects user click events and reads visible screen text for logging purposes.</string>
+    <string name="accessibility_service_label">BLE App Accessibility Logger</string>
 </resources>
+
